[package]
name = "embassybase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { version = "0.13.0", features = ["async", "embassy", "embassy-time-timg0"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32c3"] }
embassy-executor   = { version = "0.3.0", features = ["nightly", "integrated-timers", "arch-riscv32", "executor-thread"] }
embassy-time   = { version = "0.1.5", features = ["nightly"] }
embassy-sync = "0.5.0"
embedded-hal-async = "1.0.0-rc.1"
embedded-io-async = "0.6.1"
portable-atomic = "1.5.1"